--- a/dxproject/dxproject/dxproject.vcxproj
+++ b/dxproject/dxproject/dxproject.vcxproj
@@ -118,11 +118,13 @@
     <ClCompile Include="BlankDemo.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BlankDemo.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="System.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl">
