--- a/dxproject/dxproject/dxproject.vcxproj.filters
+++ b/dxproject/dxproject/dxproject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="System.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="D3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="System.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
