--- a/dxproject/dxproject/dxproject.vcxproj
+++ b/dxproject/dxproject/dxproject.vcxproj
@@ -69,7 +69,22 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>$(SolutionDir)Dependencies\DirectXTK\Includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\DirectXTK\Libs\x86\Debug;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>$(SolutionDir)Dependencies\DirectXTK\Includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\DirectXTK\Libs\x86\Release;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(SolutionDir)Dependencies\DirectXTK\Includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\DirectXTK\Libs\x64\Debug;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(SolutionDir)Dependencies\DirectXTK\Includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\DirectXTK\Libs\x64\Release;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
