added constantBuffer class template

--- a/dxproject/dxproject/dxproject.vcxproj
+++ b/dxproject/dxproject/dxproject.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="D3D.h" />
     <ClInclude Include="Graphics.h" />
